[gd_scene load_steps=7 format=2]

[ext_resource path="res://font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://corbeille.svg" type="Texture" id=2]
[ext_resource path="res://Scenes/Niveau.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.482353, 0.588235, 0.960784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="Niveau" type="Control"]
anchor_right = 0.411
anchor_bottom = 0.093
margin_right = 0.135986
margin_bottom = 0.199997
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 435.0
margin_bottom = 55.0
custom_styles/panel = SubResource( 1 )

[node name="NumNiveau" type="Label" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -19.5
margin_right = 43.0
margin_bottom = 19.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "X"
align = 1

[node name="NomNiveau" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -19.5
margin_right = 123.5
margin_bottom = 19.5
custom_fonts/font = SubResource( 3 )

[node name="Button" type="Button" parent="Panel"]
margin_left = 382.0
margin_top = 8.0
margin_right = 1194.0
margin_bottom = 814.0
rect_scale = Vector2( 0.05, 0.05 )
icon = ExtResource( 2 )
flat = true

[connection signal="gui_input" from="Panel" to="." method="_on_Panel_gui_input"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
